finally solve inline-block alignment issues

--- a/stylesheets/status-bar.less
+++ b/stylesheets/status-bar.less
@@ -8,7 +8,4 @@
   > * {
     padding: 0 @modular-scale-s * 1rem;
   }
-  .inline-block {
-    vertical-align: top;
-  }
 }
