--- a/stylesheets/utilities.less
+++ b/stylesheets/utilities.less
@@ -24,7 +24,7 @@
   margin-right: @modular-scale-xxs * 1rem;
 }
 .inline-block .inline-block {
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 // TODO: Move to a better place, not sure where it gets used
